[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Monstros/Monstro Trevas 1.png" type="Texture" id=1]
[ext_resource path="res://DarkEnemy.gd" type="Script" id=2]
[ext_resource path="res://vida.tres" type="Theme" id=3]
[ext_resource path="res://assets/Monstros/Monstro Trevas 2.png" type="Texture" id=4]
[ext_resource path="res://assets/Monstros/Monstro Trevas 6.png" type="Texture" id=5]
[ext_resource path="res://assets/Monstros/Monstro Trevas 4.png" type="Texture" id=6]
[ext_resource path="res://assets/Monstros/Monstro Trevas 3.png" type="Texture" id=7]
[ext_resource path="res://assets/Monstros/Monstro Trevas 5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="CircleShape2D" id=2]
radius = 2048.0

[sub_resource type="CircleShape2D" id=3]
radius = 39.0128

[node name="DarkEnemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 20
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 0.218968, 0.218968 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -47.0
margin_top = -55.0
margin_right = 48.0
margin_bottom = -35.0
theme = ExtResource( 3 )
value = 100.0
rounded = true

[node name="Timer" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
